--- a/Lang/Resources.de.resx
+++ b/Lang/Resources.de.resx
@@ -26,4 +26,13 @@
     <data name="DragInvalid" xml:space="preserve">
         <value>Kein(e) valide(n) Datei(en)</value>
     </data>
+    <data name="FilePickerTitle" xml:space="preserve">
+        <value>Datei(en) auswählen</value>
+    </data>
+    <data name="FilePickerDef" xml:space="preserve">
+        <value>BASIC Dateien</value>
+    </data>
+    <data name="FileListDesc" xml:space="preserve">
+        <value>Ausgewählte Datei(en) (Rechtsklick zum entfernen):</value>
+    </data>
 </root>
